# 15202_mustakimov

./: README.md
LifeGame/: LifeGame.pro  field.cpp  field.h  fieldwidget.cpp  fieldwidget.h  hashfield.cpp  hashfield.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resizefielddialog.cpp  resizefielddialog.h  resizefielddialog.ui
build-LifeGame-Desktop_Qt_5_7_0_GCC_64bit-Debug/: LifeGame  Makefile  moc_fieldwidget.cpp  moc_mainwindow.cpp  moc_resizefielddialog.cpp  ui_mainwindow.h  ui_resizefielddialog.h
graphs/: CMakeLists.txt  Graph.h  GraphLinked.h  GraphMatrix.h  Searches.h
graphs/tests/: CMakeLists.txt  GraphMatrixTests.cpp  GraphTest.cpp  SearchesLinkedTests.cpp  SearchesMatrixTests.cpp
hashTable/: CMakeLists.txt  HashTable.cpp  HashTable.h  main.cpp
hashTable/tests/: CMakeLists.txt  HashTableTest.cpp
myArray/: CMakeLists.txt  MyArray.h
myArray/tests/: CMakeLists.txt  MyArrayTest.cpp
prisoners/: Arguments.cpp  Arguments.h  CMakeLists.txt  Controller.cpp  Controller.h  ControllerDetailed.cpp  ControllerDetailed.h  ControllerFast.cpp  ControllerFast.h  ControllerTournament.cpp  ControllerTournament.h  ErrorPolicies.h  Factory.cpp  Factory.h  Readme.md  ScoreMatrix.cpp  ScoreMatrix.h  Strategy.cpp  Strategy.h  main.cpp  matrix.txt
prisoners/Strategies/: Adaptive.cpp  Adaptive.h  Democracy.cpp  Democracy.h  Fortress4.cpp  Fortress4.h  Loyal.cpp  Loyal.h  Psycologist.cpp  Psycologist.h  Random.cpp  Random.h  Revengeful.cpp  Revengeful.h  Sgs.cpp  Sgs.h  Traitor.cpp  Traitor.h  Varying.cpp  Varying.h
prisoners/Tests/: CMakeLists.txt  FactoryTest.cpp  GameTests.cpp
prisoners/configs/: democracy-1.txt
smartPointers/: CMakeLists.txt  SharedPointer.h  SmartPointer.h  main.cpp
smartPointers/tests/: CMakeLists.txt  SharedPointerTests.cpp  SmartPointerTests.cpp
starcraft/: BattleCruiser.cpp  BattleCruiser.h  CMakeLists.txt  Factory.cpp  Factory.h  SiegeTank.cpp  SiegeTank.h  Unit.h  Zergling.cpp  Zergling.h  main.cpp
